# simple-triplestore

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: FUNDING.yml
benches/: benchmark.rs
src/: conformance.rs  id.rs  lib.rs  mem.rs  mergeable.rs  prelude.rs  query.rs  query_impl.rs  rdf.rs  sled.rs  traits.rs  triple.rs
src/conformance/: extend.rs  insert.rs  iter.rs  merge.rs  query.rs  remove.rs  set.rs
src/id/: u64.rs  ulid.rs
src/mem/: extend.rs  insert.rs  iter.rs  merge.rs  query.rs  remove.rs  set.rs
src/rdf/: extend.rs  insert.rs  iter.rs  merge.rs  query.rs  remove.rs
src/sled/: extend.rs  insert.rs  iter.rs  merge.rs  query.rs  remove.rs  set.rs
src/traits/: bidir_index.rs  error.rs  extend.rs  id_generator.rs  id_type.rs  index_type.rs  insert.rs  into_iter.rs  iter.rs  merge.rs  mergeable.rs  property.rs  query.rs  remove.rs  set.rs  triplestore.rs
src/triple/: decode.rs  decorated.rs  encode.rs  key_bounds.rs
