[package]
name = "simple-triplestore"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bincode = { version = "1.3.3", optional=true }
serde = { version = "1.0.204", optional=true }
sled = { version ="0.34.7", optional=true }
ulid = { version = "1.1.3" }

[features]
default = ["sled"]
sled = ["dep:sled", "dep:serde", "ulid/serde", "dep:bincode"]
