[package]
name = "simple-triplestore"
version = "0.0.2"
edition = "2021"
authors = ["rcythr"]
license = "Apache-2.0"
description = "A simple graph database for storing triples with support for custom node and edge properties."
repository = "https://github.com/rcythr/simple_triplestore"
keywords = ["database", "graph", "triple"]
categories = ["data-structures", "database-implementations"]

[dependencies]
bincode = { version = "1.3.3", optional=true }
itertools = "0.13.0"
serde = { version = "1.0.204", optional=true }
sled = { version ="0.34.7", optional=true }
ulid = { version = "1.1.3" }

[dev-dependencies]
serde = { version = "1.0.204", features=["derive"] }
tempdir = "0.3.7"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"

[features]
sled = ["dep:sled", "dep:serde", "ulid/serde", "dep:bincode"]
default = ["sled"]

[[bench]]
name = "benchmark"
harness = false
